Improve policy services and exception handling