@@ -4,13 +4,12 @@ import jakarta.servlet.http.HttpServletRequest;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.List;
-import java.util.stream.Collectors;
-import org.axonframework.messaging.interceptors.ExceptionHandler;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.MethodArgumentNotValidException;
+import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
 import org.springframework.web.method.annotation.MethodArgumentTypeMismatchException;
 import org.springframework.web.servlet.NoHandlerFoundException;
@@ -21,19 +20,11 @@ public class GlobalExceptionHandler {
   private static final Logger LOGGER = LoggerFactory.getLogger(GlobalExceptionHandler.class);
   private static final DateTimeFormatter FORMATTER = DateTimeFormatter.ISO_LOCAL_DATE_TIME;
 
-  @ExceptionHandler(payloadType = MethodArgumentNotValidException.class)
-  public ResponseEntity<ErrorResponse> handleMethodArgumentNotValidException(
-      InvalidInputException ex, HttpServletRequest request) {
-    LOGGER.error("MethodArgumentNotValid: {}", ex.getMessage());
-    return buildErrorResponse(
-        HttpStatus.BAD_REQUEST, "Bad Request", ex.getMessage(), request.getRequestURI());
-  }
-
   /**
    * Handles custom ResourceNotFoundException (404 Not Found) Thrown when a requested resource does
    * not exist.
    */
-  @ExceptionHandler(payloadType = ResourceNotFoundException.class)
+  @ExceptionHandler(ResourceNotFoundException.class)
   public ResponseEntity<ErrorResponse> handleResourceNotFoundException(
       ResourceNotFoundException ex, HttpServletRequest request) {
     LOGGER.warn("Resource Not Found: {}", ex.getMessage());
@@ -45,7 +36,7 @@ public class GlobalExceptionHandler {
    * Handles custom InvalidInputException (400 Bad Request) Thrown for general bad input that
    * doesn't fit specific validation.
    */
-  @ExceptionHandler(payloadType = InvalidInputException.class)
+  @ExceptionHandler(InvalidInputException.class)
   public ResponseEntity<ErrorResponse> handleInvalidInputException(
       InvalidInputException ex, HttpServletRequest request) {
     LOGGER.warn("Invalid Input: {}", ex.getMessage());
@@ -57,7 +48,7 @@ public class GlobalExceptionHandler {
    * Handles MethodArgumentNotValidException (400 Bad Request) Thrown when @Valid or @Validated
    * fails for request body.
    */
-  @ExceptionHandler(payloadType = MethodArgumentNotValidException.class)
+  @ExceptionHandler(MethodArgumentNotValidException.class)
   public ResponseEntity<ErrorResponse> handleMethodArgumentNotValid(
       MethodArgumentNotValidException ex, HttpServletRequest request) {
     List<ValidationError> validationErrors =
@@ -68,7 +59,7 @@ public class GlobalExceptionHandler {
                         .field(fieldError.getField())
                         .defaultMessage(fieldError.getDefaultMessage())
                         .build())
-            .collect(Collectors.toList());
+            .toList();
 
     String message = "Validation failed for request parameters.";
     LOGGER.warn("{}: {}", message, validationErrors);
@@ -77,14 +68,15 @@ public class GlobalExceptionHandler {
         HttpStatus.BAD_REQUEST,
         HttpStatus.BAD_REQUEST.getReasonPhrase(),
         message,
-        request.getRequestURI());
+        request.getRequestURI(),
+        validationErrors);
   }
 
   /**
    * Handles MethodArgumentTypeMismatchException (400 Bad Request) Thrown when method argument is
    * not of the expected type (e.g., UUID in path variable).
    */
-  @ExceptionHandler(payloadType = MethodArgumentTypeMismatchException.class)
+  @ExceptionHandler(MethodArgumentTypeMismatchException.class)
   public ResponseEntity<ErrorResponse> handleMethodArgumentTypeMismatch(
       MethodArgumentTypeMismatchException ex, HttpServletRequest request) {
     String message =
@@ -102,7 +94,7 @@ public class GlobalExceptionHandler {
    * Handles custom ServiceUnavailableException (503 Service Unavailable) Thrown for external
    * service dependencies issues or temporary outages.
    */
-  @ExceptionHandler(payloadType = ServiceUnavailableException.class)
+  @ExceptionHandler(ServiceUnavailableException.class)
   public ResponseEntity<ErrorResponse> handleServiceUnavailableException(
       ServiceUnavailableException ex, HttpServletRequest request) {
     LOGGER.error(
@@ -118,7 +110,7 @@ public class GlobalExceptionHandler {
    * Handles NoHandlerFoundException (404 Not Found for undefined endpoints) Make sure
    * 'spring.mvc.throw-exception-if-no-handler-found=true' is set in application.properties.
    */
-  @ExceptionHandler(payloadType = NoHandlerFoundException.class)
+  @ExceptionHandler(NoHandlerFoundException.class)
   public ResponseEntity<ErrorResponse> handleNoHandlerFoundException(
       NoHandlerFoundException ex, HttpServletRequest request) {
     LOGGER.warn("No Handler Found: {} {}", ex.getHttpMethod(), ex.getRequestURL());
@@ -133,7 +125,7 @@ public class GlobalExceptionHandler {
    * General fallback for any unhandled exceptions (500 Internal Server Error) Logs the full stack
    * trace for debugging.
    */
-  @ExceptionHandler(payloadType = Exception.class)
+  @ExceptionHandler(Exception.class)
   public ResponseEntity<ErrorResponse> handleAllUncaughtException(
       Exception ex, HttpServletRequest request) {
     LOGGER.error("An unexpected internal server error occurred: ", ex); // Log full stack trace
